--- a/example/index.html
+++ b/example/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <script src="http://code.jquery.com/jquery-3.1.1.js"></script>
-    <script src="../jquery.graphql.min.js"></script>
+    <script src="../jquery.graphql.js"></script>
     <script>
       var graph = $.graphql("http://localhost:3000/graphql", {
         fragments: {
