--- a/example/index.html
+++ b/example/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <script src="../graphql-client.js"></script>
+    <script src="../graphql.js"></script>
     <script>
       var graph = new GraphQLClient("http://localhost:3000/graphql", {
         fragments: {
