--- a/example/index.html
+++ b/example/index.html
@@ -1,8 +1,8 @@
 <html>
   <head>
-    <script src="../graphql.min.js"></script>
+    <script src="../graphql.js"></script>
     <script>
-      var graph = new GraphQLClient("http://localhost:3000/graphql", {
+      var graph = graphql("http://localhost:3000/graphql", {
         fragments: {
           login: {
             auth: "on User {token, hasPin}"
