--- a/example/index.html
+++ b/example/index.html
@@ -2,12 +2,12 @@
   <head>
     <script src="../graphql.js"></script>
     <script>
-      var graph = graphql("https://8f0a24.pod-1.api-dev.simprapos.com/admin", {
+      var graph = graphql("https://xxx.pod-1.api-dev.simprapos.com/admin", {
         alwaysAutodeclare: true,
         asJSON: true,
         debug: true,
         headers: {
-          'Auth-Token': 'VXNlcjpmYTc4MDBkNzcyYzUwNGNhN2E4NGFkYzM4N2ZkMzE5Mw=='
+          'Auth-Token': 'xxx'
         },
         fragments: {
           tax: "on Tax { id, name }",
@@ -27,6 +27,14 @@
         }
       `)
 
+      var createTax = graph.mutate(`
+        tax_create(input: $input) {
+          tax {
+            ...tax
+          }
+        }
+      `)
+
       allTaxes.merge('fetchAll').then(function (response) {
         console.log('Taxes', response)
       })
@@ -35,9 +43,28 @@
         console.log('Reasons', response)
       })
 
-      setTimeout(function () {
-        graph.commit('fetchAll')
-      }, 1000)
+      createTax.merge('seed', { 'input!TaxCreateInput': { name: { locale: 'en', text:"18"}, rate: 18 } }).then(function (response) {
+        console.log('CreateTax 1', response)
+      })
+
+      createTax.merge('seed', { 'input!TaxCreateInput': { name: { locale: 'en', text:"8"}, rate: 8 } }).then(function (response) {
+        console.log('CreateTax 2', response)
+      })
+
+      createTax.merge('seed', { 'input!TaxCreateInput': { name: { locale: 'en', text:"12"}, rate: 12 } }).then(function (response) {
+        console.log('CreateTax 3', response)
+      })
+
+      graph.commit('fetchAll').then(function (r) {
+        console.log(r)
+      })
+      graph.commit('seed').then(function (r) {
+        console.log(r)
+      })
+
+      // setTimeout(function () {
+      //   graph.commit('fetchAll')
+      // }, 1000)
 
     </script>
   </head>
