--- a/example/index.html
+++ b/example/index.html
@@ -2,70 +2,47 @@
   <head>
     <script src="../graphql.js"></script>
     <script>
-      var graph = graphql("https://xxx.pod-1.api-dev.simprapos.com/admin", {
+      var graph = graphql("https://example.com/graphql", {
         alwaysAutodeclare: true,
         asJSON: true,
-        debug: true,
-        headers: {
-          'Auth-Token': 'xxx'
-        },
-        fragments: {
-          tax: "on Tax { id, name }",
-          reason: "on Reason { id, name }"
-        }
+        debug: true
       })
 
-      var allTaxes = graph.query(`
-        taxes(with_inactive: true) {
-          ... tax
-        }
-      `)
+      var postId = 123
 
-      var allReasons = graph.query(`
-        reasons(with_inactive: true, kind: [returned, cancelled]) {
-          ... reason
+      var fetchPost = graph.query(`{
+        post(id: $id) {
+          id
+          title
+          text
         }
-      `)
+      }`)
 
-      var createTax = graph.mutate(`
-        tax_create(input: $input) {
-          tax {
-            ...tax
+      var fetchComments = graph.query(`{
+        comments(postId: $postId) {
+          comment
+          owner {
+            name
           }
         }
-      `)
+      }`)
 
-      allTaxes.merge('fetchAll').then(function (response) {
-        console.log('Taxes', response)
+      // This won't send a request.
+      fetchPost.merge('buildPage', { id: postId }).then(function (post) {
+        console.log(post)
       })
 
-      allReasons.merge('fetchAll').then(function (response) {
-        console.log('Reasons', response)
+      // This also won't send a request.
+      fetchComments.merge('buildPage', { postId: postId }).then(function (comments) {
+        console.log(comments)
       })
 
-      createTax.merge('seed', { 'input!TaxCreateInput': { name: { locale: 'en', text:"18"}, rate: 18 } }).then(function (response) {
-        console.log('CreateTax 1', response)
+      // This will send a merged request:
+      graph.commit('buildPage').then(function (response) {
+        // All base fields will be in response return.
+        console.log(response.post)
+        console.log(response.comments)
       })
-
-      createTax.merge('seed', { 'input!TaxCreateInput': { name: { locale: 'en', text:"8"}, rate: 8 } }).then(function (response) {
-        console.log('CreateTax 2', response)
-      })
-
-      createTax.merge('seed', { 'input!TaxCreateInput': { name: { locale: 'en', text:"12"}, rate: 12 } }).then(function (response) {
-        console.log('CreateTax 3', response)
-      })
-
-      graph.commit('fetchAll').then(function (r) {
-        console.log(r)
-      })
-      graph.commit('seed').then(function (r) {
-        console.log(r)
-      })
-
-      // setTimeout(function () {
-      //   graph.commit('fetchAll')
-      // }, 1000)
-
     </script>
   </head>
   <body>
